# c-

./: databases.py  embedding.py  llm.py  tool.py
EDUAGENT/: pyproject.toml
EDUAGENT/prompts/: mini_test_sp.txt  mini_test_up.txt  src.agents.detail_planner.call.sp.txt  src.agents.overview_planner.call.sp.txt  src.agents.overview_planner.call.um.txt  src.agents.profile_collector.call.sp.txt
EDUAGENT/src/: app_logging.py  configs.py  note.txt  state.py
EDUAGENT/src/UI/BE/: app.py  main.py
EDUAGENT/src/UI/FE/: index.html  style.css
EDUAGENT/src/agents/: detail_planner.py  edu_agent.py  mini_test.py  overview_planner.py  profile_collector.py  run.py
EDUAGENT/src/chatbot-ui/: index.html
EDUAGENT/src/chatbot-ui/assets/: app.py
EDUAGENT/src/chatbot-ui/css/: base.css  chat.css  layout.css  upload.css
EDUAGENT/src/chatbot-ui/html/: chat.html  header.html  sidebar.html  upload.html
EDUAGENT/src/chatbot-ui/js/: chat.js  main.js  upload.js
EDUAGENT/src/clients/: vidu.py
EDUAGENT/src/modules/rag/: embed_chuong_trinh_toan_10.py  run.py
ass1/: bai1.php
